1. 환결설정 관리자 생성 2. 포지션리스트 수신 수정 3. 주문내역 수신 추가 4. 접수확인 주문목록 함수 추가 5. 포지션 리스트 목록 함수 추가 6. 주문 목록 함수 추가 7. 주문표시 어댑터 추가 8. 포지션 리스트 액티비티 패키지 수정 9. 주문내역 리스트 액티비티 패키지 수정 10. 로그인 액티비티에서 로그인시 아이디 패스워드 저장하게 바꿈 11. 로그인 액티비티에서 사용자 등록 이벤트 처리후 아이디 패스워드 저장하게 바꿈 12. 메인액티비티에서 주문목록 요청하게 기능추가 13. 메인액티비티에서 포지션목록 요청하게 기능추가 14. 포지션 목록 동적으로 수정가능하게 수정함. 15. 주문레이아웃 추가 16. 주문내역 디자인 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name="signalmaster.com.smmobile.mock.SmMockPopup" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.index.IndexSettingPopup" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.AccountActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="signalmaster.com.smmobile.TradeRecordActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name="signalmaster.com.smmobile.OrderUI.TradeRecordActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.IncomeChartActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.LoginActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.SignUpActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
@@ -38,7 +38,7 @@
         <activity android:name="signalmaster.com.smmobile.mock.IndicatorSettingDialog" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.mock.MACDSettingDialog" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.portfolio.PortfolioDialog" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="signalmaster.com.smmobile.PositionListActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name="signalmaster.com.smmobile.OrderUI.PositionListActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.expert.SmYoutubePlayer" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize" android:screenOrientation="unspecified"/>
         <activity android:name="signalmaster.com.smmobile.LoadingActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:configChanges="keyboardHidden|orientation|screenSize">
         <intent-filter>
