1. 계좌에 수수료, 누적 수익 추가 2. 자동 주문 심볼 설정 함수 추가 3. 로그인, 사인업 클래스 패키지 변경 4. 마켓관리자 인데스로 심볼 가져오는 함수 추가 5. 모의 매매 종목별 화폐 단위 적용 6. 수수료 관련 프로토콜 추가 7. 포지션 수신시 계좌 누적 수익 정보 추가 8. 주문 관리자 주문 클리어 함수 추가 9. 통합 주문 관리자에 주문 심볼 설정하는 함수 추가 10. 포지션 관리자에 수수료 읽어 오는 함수 추가 11. 통합 주문 관리자에 주문 수량 변수 추가 12. 심볼 선택자에서 자동으로 종목 선택하게 코드를 수정함 13. 계좌 보기에서 수익에 따른 텍스트 색상 적용 추가 14. 모의매매와 자동매매 종목 동기화 적용 15. 주문 수량 설정하는 부분 구현 16. 포지션 정보 표시 일부 수정 17. 계좌 수익 정보 표시 일부 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
         <activity android:name="signalmaster.com.smmobile.AccountActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.OrderUI.TradeRecordActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.IncomeChartActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="signalmaster.com.smmobile.LoginActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="signalmaster.com.smmobile.SignUpActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name="signalmaster.com.smmobile.login.LoginActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name="signalmaster.com.smmobile.login.SignUpActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.NumberInputActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.OperationLevelDialog" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.mock.IndicatorSettingDialog" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
