1. 계좌에 계좌 타입 추가 2. 계좌 액티비티 계좌 얻어 오는 부분 수정 3. 계좌 선택 이벤트 추가 4. 프로토콜에서 계좌 수신시 계좌 타입 수신 추가 5. 서비스 관리자에 계좌 목록으로 접수확인 목록 요청 함수 추가 6. 서비스 관리자에 계좌 목록으로 체결확인 목록 요청 함수 추가 7. 서비스 관리자에 계좌 목록으로 포지션 목록 요청 함수 추가 8. 최근 거래내역 클래스 추가 9. 계좌 관리자에 포지션 목록 얻어 오는 추가 10. 포지션관리자에 포지션 얻어오는 함수 추가 11. 거래기록 클릭 이벤트 추가 12. 계좌별 포지션 목록 보여주기 클래스 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name="signalmaster.com.smmobile.SmSiseChartActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.mock.SmMockPopup" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.index.IndexSettingPopup" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="signalmaster.com.smmobile.AccountActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name="signalmaster.com.smmobile.account.AccountActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.OrderUI.TradeRecordActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.IncomeChartActivity" android:theme="@style/Theme.MyDialog" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name="signalmaster.com.smmobile.login.LoginActivity"  android:configChanges="keyboardHidden|orientation|screenSize"/>
